# langchain-persona-debate

./: .gitignore  README.md  discussion.py  example.env  pyproject.toml
config/: characters.yaml  prompts.yaml
